plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'co.edu.uniquindio'
version = '0.0.1-SNAPSHOT'
description = 'Proyecto Backend Tienda Sana'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'commons-logging', module: 'commons-logging'
        exclude group: 'com.google.collections', module: 'google-collections' // evitar conflicto
    }
}

repositories {
    mavenCentral()
    // maven { url "https://jitpack.io" } // Para algunas dependencias específicas
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Versión forzada de Guava compatible con Firebase y MercadoPago
    implementation 'com.google.guava:guava:31.1-jre'

    // Payment gateway
    implementation('com.mercadopago:sdk-java:2.1.27') {
        exclude group: 'com.google.collections', module: 'google-collections'
    }

    // Firebase
    implementation('com.google.firebase:firebase-admin:9.2.0') {
        exclude group: 'com.google.collections', module: 'google-collections'
    }

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Mail
    implementation 'org.simplejavamail:simple-java-mail:8.11.2'
    implementation 'org.simplejavamail:batch-module:8.10.1'

    // JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto:6.3.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Prometheus
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Selenium - unificado a una sola versión
    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'

    // Rate Limiting con Bucket4j - solo una implementación
    implementation 'com.bucket4j:bucket4j-core:8.7.0'
    implementation 'com.bucket4j:bucket4j-jcache:8.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'javax.cache:cache-api'
    implementation 'org.ehcache:ehcache:3.10.8'


    //Playwright
    testImplementation 'com.microsoft.playwright:playwright:1.40.0' // O la versión más reciente


    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0' // O la versión más reciente de Selenium
    // Dependencia para WebDriverManager (opcional pero muy útil para manejar los drivers de los navegadores)
    implementation 'io.github.bonigarcia:webdrivermanager:5.8.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'

    // Asegúrate de que JUnit Platform Launcher esté presente para ejecutar tests desde Gradle
    testImplementation 'org.junit.platform:junit-platform-launcher'


    // Lombok (opcional, para reducir código boilerplate)
    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
    testCompileOnly 'org.projectlombok:lombok:1.18.32'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
}


test {
    useJUnitPlatform()
}

tasks.register('seedMongo', JavaExec) {
    group = 'development'
    description = 'Inserta datos demo en MongoDB (cuentas, productos, mesas) y valida la conexión.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'co.uniquindio.tiendasana.scripts.MongoSeedCli'
}